--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ div {
   height: 100vw;
   border: 1px solid black;
   font-size: 30px;
-  font-weight: 300;
+  font-weight: 400;
+  font-family: roboto;
 
 }
