--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
-div {
-  width: 100%;
-  max-width: 200px;
-  height: 100vw;
-  border: 1px solid black;
-  font-size: 30px;
-  font-weight: 400;
-  font-family: roboto;
+.red {
+    color:red;
+}
 
+.blue {
+    color: blue;
+}
+
+section {
+    height: 80vh;
+    border: 3px solid black;
 }
