--- a/style.css
+++ b/style.css
@@ -1,9 +1,3 @@
-.box {
-    width: 200px;
-    height: 200px;
-    background-color: green;
-    border: 15px solid red;
-    padding: 15px;
-    margin: 15px;
-    box-sizing: border-box;
+body {
+    position: absolute
 }
