--- a/style.css
+++ b/style.css
@@ -1,26 +1,8 @@
-div {
-    transition: background-color 300ms;
+.nav__link {
+    color: black;
 }
 
-div:hover {
-background-color: rgba(67, 66, 66, .5);
-}
-
-button {
-    animation: float 2000ms infinite alternate-reverse;
-    transition: all 3000ms;
-}
-
-button:hover {
-    background-color: black;
-    color: white;
-}
-
-@keyframes float {
-    0% {
-transform: translateY(0);
-    }
-    100% {
-transform: translateY(10px);
-    }
+.nav__link--active {
+    font-weight: bold;
+    color: purple;
 }
